<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyCarImageActivity">

    <ImageView
        android:id="@+id/image_1"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/image_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_0" />

    <ImageView
        android:id="@+id/image_2"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_1"
        app:srcCompat="@drawable/img_10" />

    <ImageView
        android:id="@+id/image_3"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_2"
        app:srcCompat="@drawable/img_15" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:text="@string/next_btn"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_3"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/carMake"
        android:layout_width="132dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/carMake"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_btn"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_3"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/statusMsg"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>