<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HintActivity">

    <ImageView
        android:id="@+id/car_imageView"
        android:layout_width="351dp"
        android:layout_height="290dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/car_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_0"
        />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="114dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/submit"
        app:backgroundTint="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_imageView" />
    <TextView
        android:id="@+id/dash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dash_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="190dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:hint="@string/enter_characters"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:maxLength="1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dash_text" />

    <TextView
        android:id="@+id/statusMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/display_message"
        android:textColor="@color/teal_700"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text" />

    <TextView
        android:id="@+id/users_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusMsg" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/display_message"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/users_input"
        app:layout_constraintTop_toBottomOf="@+id/statusMsg" />
</androidx.constraintlayout.widget.ConstraintLayout>