<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyCarMakeActivity">

    <ImageView
        android:id="@+id/car_imageView"
        android:layout_width="351dp"
        android:layout_height="290dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/car_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_0" />

    <Spinner
        android:id="@+id/car_make_spinner"
        android:layout_width="138dp"
        android:layout_height="39dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/identify_button"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_imageView" />

    <Button
        android:id="@+id/identify_button"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:text="@string/identify_btn"
        app:backgroundTint="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_imageView" />

    <TextView
        android:id="@+id/display_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/display_message"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_button" />

    <TextView
        android:id="@+id/wrong_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/your_answer"
        android:textSize="20sp"
        android:textStyle="bold"

        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/entered_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_message" />

    <TextView
        android:id="@+id/entered_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/display_message"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/wrong_message"
        app:layout_constraintTop_toBottomOf="@+id/display_message" />

    <TextView
        android:id="@+id/wrong_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/correct_answer"
        android:textSize="20sp"
        android:textStyle="bold"

        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrong_message" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/display_message"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/wrong_message1"
        app:layout_constraintTop_toBottomOf="@+id/entered_message" />

</androidx.constraintlayout.widget.ConstraintLayout>